--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
         def versions_properties_path = 'buildScripts/gradle/versions.properties'
         def versions = new Properties()
         versions.load(file(versions_properties_path).newReader())
-        versions.forEach { key, value ->
+        versions.forEach { key, stringValue ->
+            def value = stringValue?.isInteger() ? stringValue as Integer : stringValue
             ext.set(key, value)
         }
     }
@@ -20,6 +21,7 @@ buildscript {
             mavenCentral()
         }
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:$build_gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
